--- a/_config.yaml
+++ b/_config.yaml
@@ -1,7 +1,1 @@
-plugins:
-  - jekyll-relative-links
-relative_links:
-  enabled: true
-  collections: true
-include:
-  - README.md
+theme: jekyll-theme-minimal
